<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/cover_image" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/collapsingToolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="2dp"
        android:animateLayoutChanges="true"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:logoScaleType="centerCrop"
        app:titleCentered="false">

        <SearchView
            android:id="@+id/searchBarProduct"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/selector_search_view"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search_for_product"
            android:searchHintIcon="@drawable/ic_category">

        </SearchView>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:layout_below="@+id/collapsingToolBarLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="24dp"
        android:scrollbarSize="3dp"
        android:scrollbars="vertical"
        app:layout_scrollFlags="scroll" />

    <LinearLayout
        android:id="@+id/linearLayoutEmptySearchMessage"
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:layout_alignTop="@id/recyclerView"
        android:layout_alignBottom="@id/recyclerView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search" /> <!--TODO()-->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/product_not_found"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>
